<resources>
    <string name="app_name">Insti Lost and Found</string>
    <string name="ldap_id">LDAP Id</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_lost">Lost</string>
    <string name="title_activity_lost_item">LostItem</string>
    <string name="title">Title</string>
    <string name="place">Place</string>
    <string name="desc">Description</string>
    <string name="date">Date</string>
    <string name="submit">Submit</string>
    <string name="title_activity_found_item">FoundItem</string>
    <string name="post_lost_item">Post Lost Item</string>
    <string name="post_found_item">Post Found Item</string>
    <string name="open_navigation">Open Navigation</string>
    <string name="close_navigation">Close Navigation</string>
    <string name="my_posts">My Posts</string>
    <string name="logout">Logout</string>
    <string name="title_activity_camera">Camera</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">Map</string>
</resources>
