<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="Home" />

        <item
            android:id="@+id/post_lost"
            android:title="@string/post_lost_item" />

        <item
            android:id="@+id/post_found"
            android:title="@string/post_found_item" />

        <item
            android:id="@+id/my_posts"
            android:title="@string/my_posts" />


    </group>

<group android:checkableBehavior="single">
    <item
        android:id="@+id/logout"
        android:title="@string/logout" />
</group>


</menu>