<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LostItem"
    tools:showIn="@layout/activity_lost_item"
    android:paddingLeft= "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin"
    android:paddingBottom = "@dimen/activity_vertical_margin"
    >


    <Spinner
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below = "@+id/camera"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:layout_marginTop = "15dp"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_alignParentRight = "true"
        android:layout_alignParentEnd = "true"/>
    <EditText
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/title"
        android:hint = "@string/title"
        android:focusable = "true"
        android:textColorHighlight = "#ff7eff15"
        android:textColorHint = "@color/hint_color"
        android:layout_marginTop = "15dp"
        android:layout_below = "@+id/category"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_alignParentRight = "true"
        android:layout_alignParentEnd = "true"
        />
    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/place"
        android:layout_marginLeft="5dp"
        android:textSize="20dp"
        android:hint = "@string/place"
        android:focusable = "true"
        android:textColorHighlight = "#ff7eff15"
        android:textColorHint = "@color/hint_color"
        android:layout_marginTop = "15dp"
        android:layout_below = "@+id/date"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_alignParentRight = "true"
        android:layout_alignParentEnd = "true" />
    <EditText
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/desc"
        android:hint = "@string/desc"
        android:focusable = "true"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textColorHighlight = "#ff7eff15"
        android:textColorHint = "@color/hint_color"
        android:layout_marginTop = "15dp"
        android:layout_below = "@+id/title"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_alignParentRight = "true"
        android:layout_alignParentEnd = "true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        />

    <TextView
        android:gravity="start|top"
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint = "@string/date"
        android:textColorHighlight = "#ff7eff15"
        android:textColorHint = "@color/hint_color"
        android:layout_below = "@+id/desc"
        android:layout_marginTop = "15dp"
        android:layout_marginLeft="5dp"
        android:textSize="20dp"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_alignParentRight = "true"
        android:layout_alignParentEnd = "true"/>

    <RelativeLayout
        android:id="@+id/map_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>



    <!--<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".LostItem"
        tools:showIn="@layout/activity_lost_item"
        android:paddingLeft= "@dimen/activity_horizontal_margin"
        android:paddingRight = "@dimen/activity_horizontal_margin"
        android:paddingTop = "@dimen/activity_vertical_margin"
        android:paddingBottom = "@dimen/activity_vertical_margin"
        >


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/camera"
            android:src="@drawable/camera"
            android:minWidth="80dp"
            android:minHeight="80dp"
            android:layout_marginTop = "40dp"
            android:layout_marginLeft="40dp"
            />
        <Spinner
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below = "@+id/camera"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:layout_marginTop = "20dp"
            android:layout_alignParentLeft = "true"
            android:layout_alignParentStart = "true"
            android:layout_alignParentRight = "true"
            android:layout_alignParentEnd = "true"/>
        <EditText
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:id = "@+id/TITLE"
            android:hint = "@string/title"
            android:focusable = "true"
            android:textColorHighlight = "#ff7eff15"
            android:textColorHint = "@color/hint_color"
            android:layout_marginTop = "20dp"
            android:layout_below = "@+id/category"
            android:layout_alignParentLeft = "true"
            android:layout_alignParentStart = "true"
            android:layout_alignParentRight = "true"
            android:layout_alignParentEnd = "true"
            />
        <EditText
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:id = "@+id/PLACE"
            android:hint = "@string/place"
            android:focusable = "true"
            android:textColorHighlight = "#ff7eff15"
            android:textColorHint = "@color/hint_color"
            android:layout_marginTop = "20dp"
            android:layout_below = "@+id/TITLE"
            android:layout_alignParentLeft = "true"
            android:layout_alignParentStart = "true"
            android:layout_alignParentRight = "true"
            android:layout_alignParentEnd = "true" />
        <EditText
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:id = "@+id/DESC"
            android:hint = "@string/desc"
            android:focusable = "true"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textColorHighlight = "#ff7eff15"
            android:textColorHint = "@color/hint_color"
            android:layout_marginTop = "20dp"
            android:layout_below = "@+id/PLACE"
            android:layout_alignParentLeft = "true"
            android:layout_alignParentStart = "true"
            android:layout_alignParentRight = "true"
            android:layout_alignParentEnd = "true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/submit"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:layout_marginBottom = "40dp"
            />

        <EditText
            android:id="@+id/DATE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint = "@string/date"
            android:layout_below = "@+id/DESC"
            android:layout_marginTop = "20dp"
            android:layout_alignParentLeft = "true"
            android:layout_alignParentStart = "true"
            android:layout_alignParentRight = "true"
            android:layout_alignParentEnd = "true"/>


    </RelativeLayout>-->
