<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    android:layout_margin="15dp"

    tools:context=".MainActivity">
    <TextView android:text = "@string/login"
        android:layout_width="wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/textView"
        android:textSize = "20sp"
        android:layout_below = "@+id/imageView"
        android:textColor="@color/colorPrimary"
        android:paddingTop = "@dimen/activity_vertical_margin"
        />

    <EditText
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/LDAP_ID"
        android:hint = "@string/ldap_id"
        android:focusable = "true"
        android:textColorHighlight = "#ff7eff15"
        android:textColorHint = "@color/hint_color"
        android:layout_marginTop = "20dp"
        android:layout_below = "@+id/textView"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true"
        android:layout_alignParentRight = "true"
        android:layout_alignParentEnd = "true" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imageView"
        android:src="@drawable/download"
        android:paddingTop = "10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop = "30dp"
        />


    <EditText
        android:id="@+id/LDAP_PASSWORD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LDAP_ID"
        android:layout_alignEnd="@+id/LDAP_ID"
        android:layout_alignLeft="@+id/LDAP_ID"
        android:layout_alignRight="@+id/LDAP_ID"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:ems="10"
        android:layout_marginTop = "20dp"
        android:hint="@string/password"
        android:focusable = "true"
        android:inputType="textPassword"
        android:textColorHint="@color/hint_color" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop = "20dp"
        android:background="@color/colorPrimary"

        android:layout_below="@+id/LDAP_PASSWORD"

        />


</RelativeLayout>
<!--
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:layout_width="85dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/download"
            android:contentDescription="TODO" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">


            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textColorHint="@color/colorAccent2"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="15dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textColorHint="@color/colorAccent2"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingBottom="15dp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="7dp"
                android:background="@drawable/common_google_signin_btn_icon_dark"
                android:elevation="4dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView_forgotPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/password"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textViewSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/ldap_id"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorAccent" />




        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />
    </RelativeLayout>


</LinearLayout>
-->